--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myflix-client",
   "version": "1.0.0",
-  "description": "myFlix clien-side with react",
+  "description": "myFlix client-side with react",
   "main": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/agusNiko/myFlix-client/issues"
   },
-  "homepage": "https://github.com/agusNiko/myFlix-client#readme"
+  "homepage": "https://github.com/agusNiko/myFlix-client#readme",
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.0-beta.2"
+  }
 }
