--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "myFlix client-side with react",
   "main": "src/index.html",
+  "engines": {
+    "node": "14.16.0."
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
