--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "myFlix client-side with react",
   "main": "src/index.html",
   "engines": {
-    "node": "14.16.0."
+
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
- 
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+   
   },
   "author": "agus",
   "license": "ISC",
@@ -19,12 +21,15 @@
   "bugs": {
     "url": "https://github.com/agusNiko/myFlix-client/issues"
   },
-  "homepage": "https://github.com/agusNiko/myFlix-client#readme",
+  "homepage": "https://github.com/agusNiko/myFlix-client",
   "dependencies": {
+    "-": "0.0.1",
     "axios": "^0.21.1",
+    "gh-pages": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "save-dev": "0.0.1-security"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.0-beta.2"
