--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.0-beta.2"
