--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rmdir -rf dist && parcel build src/index.html --public-url ./",
+    "build": "parcel build src/index.html --public-url ./",
     "predeploy": "rmdir -rf dist && parcel build src/index.html --public-url https://agusNiko.github.io/myFlix-client/ ",
     "deploy": "gh-pages -d dist"
   },
@@ -31,6 +31,7 @@
     "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.0-beta.2"
+    "@parcel/transformer-sass": "^2.0.0-beta.2",
+    "gh-pages": "^3.2.0"
   }
 }
