install bootstraps Icon

--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "homepage": "https://github.com/agusNiko/myFlix-client#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap-icons": "^1.5.0",
     "parcel-bundler": "^1.12.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
